# ClaimGPT

./: .dockerignore  .env.example  .gitattributes  .gitignore  ACTUAL_ARCHITECTURE.md  AUDIT_EXECUTIVE_SUMMARY.md  BRANCH_CHANGES_DOCUMENTATION.md  CLAIM_348_PARSER_ANALYSIS.md  CONCURRENCY_OPTIMIZATION.md  CONTRIBUTING.md  DEBUG_ARTIFACT_SAFETY_FIX.md  DOCUMENT_CHAT_CONTEXT_ANALYSIS.md  DOCUMENT_ISOLATION_IMPLEMENTATION.md  EXACT_CHANGES_REQUIRED.md  EXPENSE_EXTRACTION_WALKTHROUGH.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_OPPORTUNITIES.md  INFRASTRUCTURE_AUDIT_REPORT.md  INTELLIGENT_EXPENSE_EXTRACTION.md  MIGRATION_PARSED_FIELDS_UPDATE.md  MONITORING_GUIDE.md  Makefile  OPENROUTER_PARSE_ANALYSIS.md  PARSER_ANALYSIS_INDEX.md  PARSER_ARCHITECTURE.md  PARSER_DEBUG_OUTPUT_ANALYSIS.md  PARSER_FIX_ROADMAP.md  PARSER_ISSUES_SUMMARY.md  PARSER_OCR_WORKFLOW_ANALYSIS.md  PARSER_REBUILD_ARCHITECTURE.md  PARSER_REBUILD_MODULES.md  PARSER_THRESHOLD_AUDIT.md  PPSTRUCTURE_AUDIT_REPORT.md  PRODUCTION_SETUP.md  README.md  README_CURRENT_SETUP.md  README_SETUP_OCR_CELERY_UPDATE.md  README_SETUP_OCR_PARSER_UPDATE.md  README_SWAGATHUPDATES.md  (+48 more)
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
debug/: 10_isolated_documents.json  11_grouped_pages.json  cell_assignments.json  classified_tables.json  column_clusters.json  detected_regions.json  layout_model_regions.json  model_predictions.json  multiline_merges.json  normalized_expenses.json  normalized_fields.json  ppstructure_tables.json  reconstructed_tables.json  semantic_region_outputs.json
docs/: architecture.md  benchmark_and_change_summary.md  generated_claim_processing_report.md  implementation-overview.md  lld.md  packages.md  parser_file_usage_analysis.md  parser_technical_overview.md  predictor_v2_improvements.md  sso-setup.md  use-cases.md
infra/db/: claimgpt_schema.sql  migration_002_add_content_hash_to_documents.sql  migration_003_add_fraud_assessments.sql
infra/docker/: .env.example  Dockerfile.gateway  Dockerfile.ocr  Dockerfile.ocr.fixed  Dockerfile.service  docker-compose.yml  docker-compose.yml.fixed  grafana_dashboards.yml  grafana_datasources.yml  migration_001_add_parsed_fields_columns.sql  nginx.conf  prometheus.yml  redis.conf
infra/k8s/: config.yaml  hpa.yaml  namespace.yaml  services.yaml
infra/keycloak/: claimgpt-realm.json
infra/scripts/: dev-setup.sh  healthcheck.sh  render_diagrams.sh  run-service.sh  seed-data.sh  seed_tpa_test_data.py  setup_weasyprint_windows.ps1  verify_deps.py
libs/auth/: __init__.py  middleware.py  models.py
libs/observability/: __init__.py  file_logger.py  metrics.py  tracing.py
libs/schemas/: __init__.py  claim.py  events.py
libs/shared/: __init__.py  async_db.py  celery_app.py  config.py  db.py  db_config.py  field_mapping.py  llm_utility.py  local_llm.py  models.py  redis_cache.py  storage.py  workflow_state.py
libs/utils/: __init__.py  audit.py  fs.py  idempotency.py  phi.py
logs/: claim_uploads.txt
marketing/video/: .gitignore  01_script_voiceover.md  02_demo_prep_checklist.md  03_broll_capture.spec.ts  04_build_extended_video.sh  README.md  _make_card.py  package-lock.json  package.json  playwright.config.ts
migrations/: env.py
migrations/versions/: 037e9d57e356_final_schema_consolidation.py  0ebfebc471f7_sync_schema_for_content_hash_and_page_.py  107913cda0ac_add_page_image_path_to_ocr_results.py  20260423_add_content_hash_to_document.py  20260504_fix_workflow_state_schema.py  20260510_add_claim_field_feedback.py  20260511_add_canonical_json_to_claims.py  (+7 more)
models/: lgbm_rejection.txt  xgb_feature_importance.json  xgb_rejection.json
scratch/: analyze_predictions.py  check_claim.py  compare_dirs.py  debug_normalize_tables.py  diff_files.py  evaluate_table_logic.py  inspect_claim2_debug.py  inspect_claim2_new.py  inspect_claim2_semantic_response.py  inspect_claim2_tables.py  inspect_claims_final.py  inspect_pages_1_2.py  inspect_parser_v2_output.py  inspect_semantic_regions.py  inspect_specific_claim_reddy.py  inspect_specific_claim_reddy_v2.py  inspect_table_4.py  inspect_tables.py  inspect_user_claims_issue.py  list_openrouter_free_models.py  reparse_reddy_claim.py  reprocess_user_claims.py  resolve_conflict.py  retrigger_claim.py  search_debug.py  search_delivery.py  simulate_normalization.py  test_openrouter_free_parsing.py  test_openrouter_model.py  verify_heuristics_fix.py
scripts/: diagnose_backend_selection.py  diagnose_data_flow.py  test_enhanced_field_extraction.py  test_icd_ranking.py  test_openrouter_chat_reasoning.py  test_openrouter_key.py  test_openrouter_long.py  test_openrouter_model.py  test_parser_with_openrouter.py  test_pii_redaction.py
services/: reprocess_claim_full.py  shared_tasks.py  test_robust_extractor.py
tests/: conftest.py  test_doc_validator.py  test_health.py
tmp/: Architecture.md  COMMIT_MSG.txt  EXECUTIVE_SUMMARY.md  architecture_comparison_current_vs_proposed.md  build_rag_index.py  bulk_upload_claims.py  check_last_three.py  check_ocr_backend.py  check_vl_import.py  claim_flow_root_cause_note.md  comprehensive_ocr_field_flow_technical_memo.md  e2e_smoke.py  find_age.py  fix_rerankers.py  generate_synthetic_docs.py  implementation_roadmap_dynamic_fields.md  inspect_claim.py  inspect_claim_v2.py  inspect_debug.py  inspect_form.py  inspect_output.txt  inspect_region_age.py  inspect_rows.py  ocr_field_loss_quick_reference.md  ollama_eval_output.json  ollama_parser_eval.ps1  ollama_payload_smoke.json  ollama_smoke.json  ollama_tags.json  ollama_tags_utf8.json  pdfconvert.py  process_claim_debug.py  rebuild_and_verify.py  rebuild_with_sbert.py  reparse_fixed.py  reparse_last_three.py  rerank_with_clinical.py  run_clinical_rerank.py  run_full_pipeline.py  run_reconstruct2.py  (+13 more)
tools/: find_stuck_claims.py
(+297 files in other folders)
