[project]
name = "claimgpt"
version = "0.1.0"
description = "AI-powered medical claims processing platform"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
app = "uvicorn:main"

[tool.uvicorn]
app = "main:app"
host = "0.0.0.0"
port = 8000

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["services", "libs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S104"]  # allow assert in tests, binding 0.0.0.0

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
