[project]
name = "claimgpt"
version = "0.1.0"
description = "AI-powered medical claims processing platform"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
app = "uvicorn:main"

[tool.uvicorn]
app = "main:app"
host = "0.0.0.0"
port = 8000

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["services", "libs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = [
    "S101",   # allow assert in tests
    "S104",   # binding 0.0.0.0
    "B008",   # Depends() in function defaults — standard FastAPI pattern
    "B904",   # raise-without-from in except — too noisy in try/except wrappers
    "S110",   # try-except-pass — used for optional-import guards
    "E402",   # module-level import not at top — needed for sys.path inserts
    "UP042",  # replace-str-enum — StrEnum not available in all contexts
    "E501",   # line-too-long — enforced by formatter, not linter
    "N806",   # non-lowercase variable in function — used for class aliases
    "S108",   # hardcoded temp file — false positive on Path("/tmp")
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
namespace_packages = true
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "services.*.app.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = "services.*.app.main"
disable_error_code = ["arg-type", "return-value", "assignment", "index", "truthy-function", "misc", "call-overload", "import-untyped", "attr-defined"]

[[tool.mypy.overrides]]
module = "services.*.app.engine"
disable_error_code = ["arg-type", "assignment", "misc", "union-attr", "attr-defined"]

[[tool.mypy.overrides]]
module = "services.*.app.tpa_pdf"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "services.*.app.llm"
disable_error_code = ["arg-type", "misc", "attr-defined"]
